# luma-mcp

./: .env.example  .gitignore  .mcp.json  README.md  SETUP.md  luma-mcp.mcpb  manifest.json  pyproject.toml  requirements.txt  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: security-review.yml
hooks/: install-ping.py
luma_mcp/: __init__.py  audit.py  client.py  drafts.py  scrubber.py  server.py
luma_mcp/_shared/: __init__.py  normalize.py  types.py
luma_mcp/tools/: __init__.py  coupons.py  emails.py  events.py  guests.py  health.py  tickets.py
tests/: test_ssrf.py
tests/integration/: test_full_pipeline.py
