[project]
name = "luma-mcp"
version = "0.2.0"
description = "lu.ma events MCP server with draft+confirm safety, audit logging, and prompt-injection scrubbing. Covers event creation, ticket types, coupon codes, guest list, and attendee emails via the official Luma public API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = []
dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    # SSRF hardening for outbound Luma API fetch (MYC-101).
    "mycelium-security @ git+https://github.com/adelaidasofia/mycelium-security.git@v0.1.0",
]

[project.scripts]
luma-mcp = "luma_mcp.server:mcp.run"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["luma_mcp*"]
